# j1939-can-ethernet-uds-unified-diagnostic

./: .gitignore  README.md  pyproject.toml  run_udsdiag.py
.github/workflows/: ci.yml
data/: abnormal_uds.csv  normal_uds.csv
docs/: TRACEABILITY.md
src/udsdiag/: __init__.py  __main__.py  cli.py  csvio.py  live.py  transport.py  uds.py
tests/: test_cli.py  test_csvio.py  test_live.py  test_transport.py  test_uds.py
