[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "udsdiag"
version = "0.1.0"
description = "CLI tool for UDS CSV conversion over simulated J1939 CAN and Ethernet frames."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Codex" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "coverage>=7.0",
  "mypy>=1.8",
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
udsdiag = "udsdiag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["udsdiag"]
omit = ["src/udsdiag/__main__.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
